<resources>
    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_logout">Logout</string>
    <string name="app_name">Car Park Application</string>
    <string name="appWebsite">www.somewebsite.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Car Park Application v1.0</string>
    <string name="nav_header_subtitle">daveylanigan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_about">Car Park Application 1.1</string>
    <string name="app_desc">This app allows a user to book car park spaces at their chosen Car Park</string>
    <string name="app_more_info">The app uses a Node.js and MongoDB backend that is deployed on Heroku. The app talks to Heroku via Volley and Swagger</string>
    <string name="splash_title">Car Park Booking System</string>
    <string name="splash_image_desc">an image</string>
    <string name="car_park_row_name">Car Park Name</string>
    <string name="car_park_row_address">Car Park Address</string>
    <string name="user_row_name">User Name</string>
    <string name="user_row_email_address">User Address</string>
    <string name="user_row_password">Password</string>
    <string name="recentlyViewedLbl">User Profile</string>
    <string name="userLbl">Users</string>
    <string name="emptyMessageLbl">No items to display</string>
    <string name="searchCarParksLbl">Search Car Park\'s</string>
    <string name="deleteCarParksLbl">Delete Car Parks</string>
    <string name="carParksLbl">Car Parks</string>
    <string name="deleteCarParkSpacesLbl">Delete Car Park Spaces</string>
    <string name="deleteUsersLbl">Delete Users</string>
    <string name="carParkNameLbl">Name :</string>
    <string name="carParkAddressLbl">Address :</string>
    <string name="carParkSpacesLbl">Car Park Spaces</string>
    <string name="carParkLocationLbl">Location :</string>
    <string name="addCarParkBtnLbl">Add Car Park</string>
    <string name="saveCarParkBtnlbl">Save Car Park</string>
    <string name="carParkDetailsLbl">Full Car Park Details</string>
    <string name="editCarParkLbl">Edit a Car Park</string>

    <string name="editCarParkSpaceLbl">Edit a Car Space</string>
    <string name="car_park_space_row_name">Space Name</string>
    <string name="car_park_space_row_description">Space Description</string>
    <string name="car_park_space_row_carpark">Car Park</string>
    <string name="carParkSpaceDescriptionLbl">Description :</string>
    <string name="carParkSpaceLocationLbl">Location :</string>
    <string name="carParkSpaceLbl">Car Space :</string>
    <string name="carParkSpaceCarParkLbl">Car Park  :</string>
    <string name="addCarParkSpaceBtnLbl">Add Car Space</string>
    <string name="addReservationBtnLbl">Reserve</string>

    <string name="reservation_row_carpark_space">Space</string>
    <string name="reservation_row_user">User</string>
    <string name="reservationsLbl">Reservations</string>
    <string name="deleteReservationsLbl">Delete Reservations</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_sign_up">Sign In with Google</string>
    <string name="messageLoading">Please Wait. App is Loading...</string>
    <string name="google_disconnect">Disconnect Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_map">CarPark Map</string>
    <string name="google_maps_key">AIzaSyDh7ks0SrN0XQ8B2LvaVwAYsuhba0zlOnc</string>


</resources>
