<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditCarParkFragment">

    <TextView
        android:id="@+id/editCarParkBarTV"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="2dp"
        android:text="@string/carParkDetailsLbl"
        android:textAlignment="center"
        android:textColor="@color/colorFontWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editcarparkfooter"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/colorPrimary"
        android:paddingTop="5dp"
        android:text="@string/appWebsite"
        android:textAlignment="center"
        android:textColor="@color/colorFontWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/editCarParkLocationTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/carParkLocationLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editcarparkfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/editCarParkAddressTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/carParkAddressLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editcarparkfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/editCarParkNameTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/carParkNameLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editcarparkfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/editCarParkNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Car Park Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/editCarParkNameTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/editCarParkLocationET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/editCarParkLocationTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/editCarParkAddressET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editCarParkLocationET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/editCarParkAddressTV"
        app:layout_constraintTop_toBottomOf="@+id/editCarParkNameET"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/editCarParkBtn"
        android:elevation="5dp"
        android:layout_width="79dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/blue_add_48"
        android:onClick="saveCarPark"
        android:text="@string/saveCarParkBtnlbl"
        app:layout_constraintBottom_toTopOf="@+id/editcarparkfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/editCarParkTitleTV"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>


