<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carparkspacecardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="50dp"
    android:outlineSpotShadowColor="@color/colorCardShadow"
    app:cardCornerRadius="5dp"
    app:cardElevation="24dp">

    <RelativeLayout
        android:id="@+id/cardviewlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_activated">

        <ImageView
            android:id="@+id/rowFavouriteImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="fav"
            android:gravity="center_vertical"
            android:src="@drawable/favourites_72" />

        <ImageView
            android:id="@+id/rowDeleteImg"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:contentDescription="fav"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/rowCarParkSpaceName"
            android:layout_width="130dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/rowFavouriteImg"
            android:layout_alignParentStart="true"
            android:layout_marginStart="68dp"
            android:gravity="center_vertical"
            android:text="@string/car_park_space_row_name"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowCarParkSpaceDescription"
            android:layout_width="130dp"
            android:layout_height="16dp"
            android:layout_alignStart="@+id/rowCarParkSpaceName"
            android:layout_alignBottom="@+id/rowFavouriteImg"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/car_park_space_row_description"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowCarParkSpaceCarPark"
            android:layout_width="130dp"
            android:layout_height="16dp"
            android:layout_alignStart="@+id/rowCarParkSpaceName"
            android:layout_alignBottom="@+id/rowFavouriteImg"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="-8dp"
            android:gravity="center_vertical"
            android:text="@string/car_park_space_row_carpark"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.v7.widget.CardView>