<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddCarParkFragment">


    <TextView
        android:id="@+id/addCarParkSpaceCarParkTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="10dp"
        android:text="@string/carParkSpaceCarParkLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/carParkSpaceSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/addCarParkSpaceDescriptionTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:paddingTop="10dp"
        android:text="@string/carParkSpaceDescriptionLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addCarParkSpaceDescriptionET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/addCarParkSpaceNameTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="10dp"
        android:text="@string/carParkNameLbl"
        android:textAlignment="textEnd"
        android:textColor="@color/colorFontBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addCarParkSpaceDescriptionTV"
        app:layout_constraintEnd_toStartOf="@+id/addCarParkSpaceNameET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <EditText
        android:id="@+id/addCarParkSpaceNameET"
        android:layout_width="189dp"
        android:layout_height="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Enter Space Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/addCarParkSpaceNameTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/addCarParkSpaceDescriptionET"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Enter Description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <Spinner
        android:id="@+id/carParkSpaceSpinner"
        android:layout_width="193dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <Button
        android:id="@+id/addCarParkSpaceBtn"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="312dp"
        android:background="@drawable/buttonstylewithgradient"
        android:elevation="5dp"
        android:text="@string/addCarParkSpaceBtnLbl"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>