<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carparkspacecardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="50dp"
    android:outlineSpotShadowColor="@color/colorCardShadow"
    app:cardCornerRadius="5dp"
    app:cardElevation="24dp">

    <RelativeLayout
        android:id="@+id/cardviewlayout"
        android:layout_width="430dp"
        android:layout_height="70dp"
        android:background="@drawable/background_activated">

        <TextView
            android:id="@+id/rowReservationUser2"
            android:layout_width="64dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="354dp"
            android:gravity="center_vertical"
            android:text="User            :"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowReservationCarParkSpace2"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rowFavouriteImg"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="353dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="Space         :"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowReservationCarPark2"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rowFavouriteImg"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="354dp"
            android:layout_marginBottom="-8dp"
            android:gravity="center_vertical"
            android:text="Car Park     :"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/rowDeleteImg"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="342dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="40dp"
            android:contentDescription="fav"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/rowReservationUser"
            android:layout_width="130dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="204dp"
            android:gravity="center_vertical"
            android:text="@string/reservation_row_user"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowReservationCarParkSpace"
            android:layout_width="130dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="204dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/reservation_row_carpark_space"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowReservationCarPark"
            android:layout_width="130dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="206dp"
            android:layout_marginBottom="-8dp"
            android:gravity="center_vertical"
            android:text="@string/car_park_space_row_carpark"
            android:textColor="@color/colorFontBlack"
            android:textSize="11sp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.v7.widget.CardView>